syntax = "proto3";

message Student {
    int32 student_id = 1;
    string name = 2;
    int32 age = 3;
    string email = 4;
    string major = 5;
    float gpa = 6;
}

message StudentList {
    repeated Student students = 1;
}